--- a/manifest.json
+++ b/manifest.json
@@ -14,6 +14,6 @@
     },
     "options_page": "options.html",
     "permissions":[
-        "storage", "notifications", "contextMenus", "tabs"
+        "storage", "notifications", "contextMenus", "tabs", "unlimitedStorage"
     ]
 }
