--- a/manifest.json
+++ b/manifest.json
@@ -4,12 +4,12 @@
     "version": "0.0.1",
     "description": "This extension save the tabs in your chrome browser for managing your projects!",
     "icons": {
-        "128": "icon128.png",
-        "48": "icon48.png",
-        "16": "icon16.png"
+        "128": "icons/icon128.png",
+        "48": "icons/icon48.png",
+        "16": "icons/icon16.png"
     },
     "browser_action":{
-        "default_icon": "icon16.png",
+        "default_icon": "icons/icon16.png",
         "default_popup": "popup.html"
     },
     "options_page": "options.html",
