--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -10,9 +10,9 @@
     },
     "browser_action":{
         "default_icon": "icons/icon16.png",
-        "default_popup": "popup.html"
+        "default_popup": "pages/popup.html"
     },
-    "options_page": "options.html",
+    "options_page": "pages/options.html",
     "permissions":[
         "storage", "notifications", "tabs", "unlimitedStorage"
     ]
